    is a more general approach and works for all server versions.
  * pg_ctlcluster: Do not attempt to start pg_autovacuum on 8.1+ servers.
  * pg_createcluster: Add hook for version specific function to configure
    postgresql.conf.
  * p_createcluster: Add default configuration for 8.1 clusters:
    - listen_addresses = '*'
    - stats_row_level = on
    - autovacuum = on

 -- Martin Pitt <mpitt@debian.org>  Tue, 23 Aug 2005 00:45:22 +0200

postgresql-common (23) unstable; urgency=low

  * pg_maintenance: Change directory to / before changing uid to avoid "could
    not change directory" errors. Closes: #318604.
  * Drop upgrade-scripts/all_vacuum_t1.sql since it causes too much trouble
    with big databases. Replace it with upgrade-scripts/all_test_t1.sql which
    just counts the tables in the database. This should be unintrusive, fast,
    and still appropriate for testing the upgrade scripts mechanism.
    Closes: #319035
  * pg_ctlcluster: Check if autovacuum log file symlink is dangling and avoid
    warnings about uninitialized warnings. Instead print out a meaningful
    error message. Closes: #318717
  * debian/postgresql-common.postinst: Generate a dummy
    /etc/postgresql-common/root.crt if not present. Closes: #319110
  * debian/postgresql-common.postrm: Remove /etc/postgresql-common/root.crt on
    purge.
  * pg_createcluster: If /etc/postgresql-common/root.crt exists, symlink
    root.crt from the data directory. Closes: #318818
  * debian/README.Debian: Document root.crt handling.

 -- Martin Pitt <mpitt@debian.org>  Thu, 21 Jul 2005 00:44:52 +0200

postgresql-common (22) unstable; urgency=low

  * pg_createcluster: Set default authentication for TCP connections to "md5"
    instead of the old "ident sameuser" default since it makes a lot more
    sense.
  * tests/000_debs: Fix detection of whether a package is installed.
  * tests/100_encodings: Fix filtering of postmaster processes.
